--- a/src/app/calendar/appointment/appointment.component.html
+++ b/src/app/calendar/appointment/appointment.component.html
@@ -24,7 +24,7 @@
     </mat-form-field>
   </form>
 
-  <div *ngIf="appointmentForm.invalid" class="error">
+  <div *ngIf="appointmentForm.invalid && appointmentForm.touched" class="error">
     Please fill in all required fields.
   </div>
 </div>
