--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -17,22 +17,6 @@
           {{ viewDate | date : "EEEE" }}
         </span>
       </div>
-      <mat-button-toggle-group
-        class="calendar-view-toggle"
-        name="currentView"
-        (change)="switchToView($event.value)"
-        aria-label="Calendar-View"
-      >
-        <mat-button-toggle checked="{{ true }}" value="{{ CalendarView.Month }}"
-          >Month</mat-button-toggle
-        >
-        <mat-button-toggle value="{{ CalendarView.Week }}"
-          >Week</mat-button-toggle
-        >
-        <mat-button-toggle value="{{ CalendarView.Day }}"
-          >Day</mat-button-toggle
-        >
-      </mat-button-toggle-group>
       <div class="calendar-controls">
         <button
           mat-icon-button
@@ -58,181 +42,56 @@
         >
           <mat-icon>chevron_right</mat-icon>
         </button>
-        <button
-          mat-flat-button
-          (click)="selectDate()"
-          (keydown.enter)="selectDate()"
-          (keydown.space)="selectDate()"
-        >
-          Add Appointment
-        </button>
       </div>
+      <mat-button-toggle-group
+        class="calendar-view-toggle"
+        name="currentView"
+        (change)="switchToView($event.value)"
+        aria-label="Calendar-View"
+      >
+        <mat-button-toggle checked="{{ true }}" value="{{ CalendarView.Month }}"
+          >Month</mat-button-toggle
+        >
+        <mat-button-toggle value="{{ CalendarView.Week }}"
+          >Week</mat-button-toggle
+        >
+        <mat-button-toggle value="{{ CalendarView.Day }}"
+          >Day</mat-button-toggle
+        >
+      </mat-button-toggle-group>
+      <button
+        mat-icon-button
+        class="add-appointment-button"
+        (click)="selectDate()"
+      >
+        <mat-icon>add</mat-icon>
+      </button>
     </div>
 
-    <!-- Month @start -->
-    <table
-      width="100%"
-      cellspacing="0"
-      cellpadding="0"
-      class="calendar-view-month"
-      *ngIf="currentView === 'month'"
-    >
-      <thead>
-        <tr>
-          <th *ngFor="let day of weekDays">
-            {{ day }}
-          </th>
-        </tr>
-      </thead>
-      <tbody cdkDropListGroup>
-        <tr *ngFor="let week of weeks">
-          <td
-            *ngFor="let date of week"
-            cdkDropList
-            (cdkDropListDropped)="drop($event, date)"
-            [cdkDropListData]="appointments"
-            [class.today]="isToday(date)"
-            [ngStyle]="{ opacity: isCurrentMonth(date) ? '1' : '0.5' }"
-          >
-            <div
-              (click)="selectDate(date)"
-              (keydown.enter)="selectDate(date)"
-              (keydown.space)="selectDate(date)"
-              class="cell-overlay"
-              tabindex="0"
-            ></div>
-            <div class="date">
-              {{ date.getDate() }}
-            </div>
-            <div class="appointments">
-              <ng-container *ngFor="let appointment of appointments">
-                <div
-                  tabindex="0"
-                  *ngIf="isSameDate(appointment.date, date)"
-                  class="appointment"
-                  cdkDrag
-                  cdkDragHandle
-                  [cdkDragData]="appointment"
-                  [ngStyle]="{ 'background-color': appointment.color }"
-                  (click)="editAppointment(appointment, $event)"
-                  (keydown.enter)="editAppointment(appointment, $event)"
-                  (keydown.space)="editAppointment(appointment, $event)"
-                >
-                  <span>{{ appointment.title }}</span>
-                </div>
-              </ng-container>
-            </div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <!-- Month @end -->
+    <app-month-view
+      *ngIf="currentView === CalendarView.Month"
+      [weeks]="weeks"
+      [appointments]="appointments"
+      [deleteAppointment]="deleteAppointment"
+      (dateSelected)="selectDate($event)"
+    ></app-month-view>
 
     <!-- Week View -->
-    <table
-      width="100%"
-      cellspacing="0"
-      cellpadding="0"
-      class="calendar-view-week"
-      *ngIf="currentView === 'week'"
-    >
-      <thead>
-        <tr>
-          <th></th>
-          <th *ngFor="let day of weekDays; index as i">
-            {{ day }} {{ monthDays[i].getDate() }}
-          </th>
-        </tr>
-      </thead>
-      <tbody cdkDropListGroup>
-        <tr *ngFor="let timeSlot of timeSlots">
-          <td [width]="10" class="calendar-slot-cell">
-            <span>{{ timeSlot }}</span>
-          </td>
-          <td
-            *ngFor="let day of weekDays; index as i"
-            cdkDropList
-            (cdkDropListDropped)="drop($event, monthDays[i], timeSlot)"
-            [cdkDropListData]="appointments"
-          >
-            <div
-              (click)="selectDate(monthDays[i], timeSlot)"
-              (keydown.enter)="selectDate(monthDays[i], timeSlot)"
-              (keydown.space)="selectDate(monthDays[i], timeSlot)"
-              class="cell-overlay"
-              tabindex="0"
-            ></div>
-            <div
-              tabindex="0"
-              *ngFor="
-                let appointment of getAppointmentsForDateTime(
-                  monthDays[i],
-                  timeSlot
-                )
-              "
-              class="appointment"
-              cdkDrag
-              cdkDragHandle
-              [cdkDragData]="appointment"
-              [ngStyle]="{ 'background-color': appointment.color }"
-              (click)="editAppointment(appointment, $event)"
-              (keydown.enter)="editAppointment(appointment, $event)"
-              (keydown.space)="editAppointment(appointment, $event)"
-            >
-              <span>{{ appointment.title }}</span>
-            </div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <app-week-view
+      *ngIf="currentView === CalendarView.Week"
+      [monthDays]="monthDays"
+      [timeSlots]="timeSlots"
+      [appointments]="appointments"
+      [deleteAppointment]="deleteAppointment"
+    ></app-week-view>
 
     <!-- Day View -->
-    <table
-      width="100%"
-      cellspacing="0"
-      cellpadding="0"
-      class="calendar-view-day"
-      *ngIf="currentView === 'day'"
-    >
-      <tbody cdkDropListGroup>
-        <tr *ngFor="let slot of timeSlots">
-          <td [width]="10" class="calendar-slot-cell">
-            <span>{{ slot }}</span>
-          </td>
-          <td
-            cdkDropList
-            (cdkDropListDropped)="drop($event, monthDays[0], slot)"
-            [cdkDropListData]="appointments"
-          >
-            <div
-              (click)="selectDate(monthDays[0], slot)"
-              (keydown.enter)="selectDate(monthDays[0], slot)"
-              (keydown.space)="selectDate(monthDays[0], slot)"
-              class="cell-overlay"
-              tabindex="0"
-            ></div>
-            <div
-              tabindex="0"
-              *ngFor="
-                let appointment of getAppointmentsForDateTime(
-                  monthDays[0],
-                  slot
-                )
-              "
-              class="appointment"
-              cdkDrag
-              cdkDragHandle
-              [cdkDragData]="appointment"
-              [ngStyle]="{ 'background-color': appointment.color }"
-              (click)="editAppointment(appointment, $event)"
-              (keydown.enter)="editAppointment(appointment, $event)"
-              (keydown.space)="editAppointment(appointment, $event)"
-            >
-              <span>{{ appointment.title }}</span>
-            </div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <app-day-view
+      *ngIf="currentView === CalendarView.Day"
+      [monthDays]="monthDays"
+      [timeSlots]="timeSlots"
+      [appointments]="appointments"
+      [deleteAppointment]="deleteAppointment"
+    ></app-day-view>
   </div>
 </div>
