--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
+@use "../src/app/calendar/variables.scss" as vars;
 @import "@angular/material/prebuilt-themes/magenta-violet.css";
 
 html,
@@ -7,5 +8,13 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  background-color: #203a24;
+  background-color: vars.$background-dark;
+}
+
+.mat-dialog-container {
+  background-color: red;
+  color: white;
+  border-radius: 12px;
+  padding: 24px;
+  max-width: 100%;
 }
